deployments/code-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-runner-app
  labels:
    app: code-runner-app
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-runner-app
      tier: backend
  template:
    metadata:
      labels:
        app: code-runner-app
        tier: backend
    spec:
      containers:
        - name:  code-runner-app
          image:  shrikanthkr/test-kuber-code-runner:latest
