deployments/db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres #DNS
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
    tier: database
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  tier: database
spec:
  selector:
    matchLabels:
      app: postgres
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: posrgres
        tier: database
    spec:
      containers:
        - image: postgres:12.2  # image from docker-hub
          name: postgres
          ports:
            containerPort: 5432
          volumeMounts:
            - name: pg-persistent-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: pg-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
