deployments/socket-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-app
spec:
  selector:
    app: socket-app
    tier: frontend
  ports:
    - name: http
      protocol: "TCP"
      port: 80
      targetPort: 4500
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-app
  labels:
    app: socket-app
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-app
      tier: frontend
  template:
    metadata:
      labels:
        app: socket-app
        tier: frontend
    spec:
      containers:
        - name:  web-app
          image:  shrikanthkr/test-kuber-codefry-socket:latest
          ports:
            - containerPort: 4500
          readinessProbe:
            httpGet:
              port: 4500
              path: /healthz
            initialDelaySeconds: 1
            periodSeconds: 60
            timeoutSeconds: 30
            successThreshold: 2
            failureThreshold: 3
