deployments/web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  selector:
    app: codefry-web
    tier: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: codefry-web
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codefry-web
      tier: frontend
  template:
    metadata:
      labels:
        app: codefry-web
        tier: frontend
    spec:
      containers:
        - name:  web-app
          image:  shrikanthkr/test-kuber:latest
          command: ["/bin/sh", "entrypoint.sh"]
          ports:
            - containerPort: 3000
